Add new tasks notebook and update training content
- Introduced a new Jupyter notebook for common machine learning tasks, detailing classification, regression, transcription, translation, clustering, dimensionality reduction, anomaly detection, generation, and action planning.
- Enhanced the training notebook by refining explanations of model training and inference, optimizing algorithms, and hyperparameter tuning.
- Updated glossary with new references related to training, inference, learning algorithms, hyperparameters, loss functions, and various machine learning tasks.
- Adjusted the myst.yml configuration to include the new tasks notebook and reorganized the structure of existing notebooks.
- Removed the 'minisom' dependency from pyproject.toml as it is no longer needed.

--- a/book/ml_principles/basis/models.ipynb
+++ b/book/ml_principles/basis/models.ipynb
@@ -35,7 +35,7 @@
                 "2. we nooit over alle data kunnen beschikken om het perfecte model te trainen en \n",
                 "3. het praktische nut, qua schaalbaarheid en transparantie, des te groter wordt naarmate we over een zo eenvoudig mogelijk, maar performant model beschikken.   \n",
                 "  \n",
-                "(target-modelkeuze)=\n",
+                "(target-model-selection)=\n",
                 "Zoals we zullen zien, nemen modellen heel diverse vormen aan, naargelang het specifieke domein/probleem waarvoor ze geschikt zijn. Het is ook zo dat voor een gegeven taak, er vaak verschillende types modellen gebruikt kunnen worden - elk met zijn eigen voor- en nadelen. Hoewel in veel domeinen een bepaald type model dominant is, blijft **modelkeuze** vaak een belangrijke stap in de ontwikkeling van machine learning systemen. Die keuze hangt sterk samen met de keuze van het **leeralgoritme**. Het **leeralgoritme verwijst naar de specifieke techniek die gebruikt wordt om door middel van het model patronen te leren herkennen** (of zoals we binnenkort zullen zien: \"_de model parameters te schatten_\").\n",
                 ":::"
             ]
