--- a/book/ml_principles/basis/training.ipynb
+++ b/book/ml_principles/basis/training.ipynb
@@ -11,50 +11,47 @@
                 "1. Model training\n",
                 "2. Model inference\n",
                 "\n",
+                "(target-training)=\n",
                 "Op het moment dat we een model hebben gedefinieerd, willen we de parameters aan de hand van de beschikbare data schatten. Dat doen we door het gepaste leeralgoritme toe te passen.\n",
-                "Dit noemen we **model training**.  \n",
-                "  \n",
+                "Dit noemen we **model training**.\n",
                 "Een **getraind model is een model waarvan de parameters geschat zijn met behulp van een wel bepaalde training dataset en optimalisatie-algoritme**.\n",
                 "\n",
-                "Pas als het model getraind is, kan het gebruikt worden om effectief patroonherkenning te doen op _nieuwe data_. Die stap heet _model inference_.\n",
+                "(target-inference)=\n",
+                "**Pas als het model getraind is, kan het gebruikt worden om nieuwe data te voorspellen op basis van de geleerde patronen. Die stap heet _model inference_**.\n",
                 "\n",
                 ":::{warning}\n",
-                "Het is niet omdat we een getraind model hebben, dat dit automatisch betekent dat het in staat is om de patronen te herkennen waar we naar op zoek zijn!  \n",
-                "**Onthou**: _All models are wrong, some are useful_.\n",
+                "Het is niet omdat we een getraind model hebben, dat dit automatisch betekent dat het de juiste patronen geleerd heeft en bruikbaar is om voorspellingen te doen - dit is het onderwerp van {ref}`model evaluatie <target-evaluation>`.\n",
                 ":::\n",
                 "\n",
-                "### Optimalisatie-algoritme\n",
-                "Een optimalisatie-algoritme heeft als doel om de optimale waarde voor een parameter te vinden, gegeven ons model (van de werkelijkheid) en de beschikbare data.\n",
-                "_Bij het uitvoeren van het optimalisatie-algoritme gebeurt dus het eigenlijke leren in ML_. Ook hier zijn vaak verschillende keuzes aan de orde.\n",
-                "Daarbij moeten we (a) effectiviteit om juiste parameterwaarden te vinden en (b) computationele efficiëntie tegen elkaar afwegen.\n",
-                "\n",
-                ":::{note} 🌍\n",
-                ":icon: false\n",
-                ":class: simple \n",
-                "In ons eenvoudige airco voorbeeld kozen we voor het sample gemiddelde.\n",
-                ":::\n",
-                "\n",
+                "### Leeralgoritme\n",
+                "(target-learning-algorithm)=\n",
+                "**Een leer- of optimalisatie-algoritme heeft als doel om de optimale waarde voor een parameter te vinden, gegeven ons model (van de datageneratie) en de beschikbare data.**\n",
+                "Bij het uitvoeren van het leeralgoritme gebeurt dus het eigenlijke leren in ML. Ook hier zijn vaak verschillende keuzes aan de orde.\n",
+                "Daarbij moeten we (a) de effectiviteit om optimale parameterwaarden te vinden en (b) de computationele efficiëntie tegen elkaar afwegen.  \n",
+                "  \n",
                 "De keuze van het algoritme hangt samen met het type model (lineair, neuraal netwerk, random forest, enz.) en, hoewel er voortdurend verder onderzoek gebeurt naar nieuwe technieken, zijn voor veel modellen geijkte keuzes beschikbaar. \n",
-                "Zoals we in de uitgebreidere voorbeelden ook zullen zien, zijn leer- of optimalisatie-algoritmes vaak zeer complex (denk alvast aan het [backpropagation](https://en.wikipedia.org/wiki/Backpropagation) algoritme bij neurale netwerken dat uitgebreid aan bod komt in de cursus Mathematical Foundations).  \n",
+                "Zoals we in de uitgebreidere voorbeelden ook zullen zien, zijn leeralgoritmes vaak zeer complex (denk alvast aan het [backpropagation](https://en.wikipedia.org/wiki/Backpropagation) algoritme bij neurale netwerken).  \n",
                 "In die complexiteit zit vaak ook nog het feit dat er verdere keuzes moeten gemaakt worden met betrekking tot de _specifieke configuratie van het algoritme zelf_.\n",
                 "Bij iteratieve methodes, bijvoorbeeld, waarin er stapsgewijs gezocht wordt naar een optimale waarde, moeten we een keuze maken over de grootte van die stappen (de zogenaamde _learning rate_).  \n",
                 "Die configuratie kan een grote impact hebben op de kwaliteit van het uiteindelijke resultaat. Het is vaak op voorhand ook niet duidelijk welke de beste configuratie voor het optimalisatie-algoritme is, gegeven de specifieke situatie. Daarom wordt ook daar vaak op een (al dan niet principiële manier) iteratief gewerkt om tot optimale waarden te komen.  \n",
+                "(target-hyper-parameters)=\n",
                 "**De numerieke configuratie parameters van een optimalisatie-algoritme worden _hyper parameters_ genoemd. Het proces waarbij de hyper parameters worden geoptimaliseerd heet _hyper parameter tuning_.**  \n",
                 "  \n",
                 ":::{note} 🌍\n",
                 ":icon: false\n",
                 ":class: simple \n",
-                "Veronderstel dat we voor ons eenvoudigste model voor de airco temperatuur een **_online_ optimalisatie-algoritme** willen gebruiken (**optimalisatie gebeurt sequentieel na iedere observatie in een tijdsreeks**).\n",
+                "(target-online-algorithm)=\n",
+                "Veronderstel dat we voor ons eenvoudigste model voor de airco temperatuur $E(d_i) = b$ een **_online_ leeralgoritme** willen gebruiken (**parameteroptimalisatie gebeurt sequentieel na iedere observatie in een tijdsreeks**).\n",
                 "Dat zou er als volgt kunnen uitzien:\n",
-                "- We starten met een berekende gok, bv. $\\hat{b_0} = 18$\n",
+                "- We starten met een berekende gok, bv. $\\hat{b}^0 = 18$\n",
                 "- Van zodra de eerste observatie gemaakt wordt, bv. $d_0 = 25$, willen we onze initiële schatting updaten, maar we willen uiteraard niet gewoon de geobserveerde waarde overnemen.\n",
-                "- We kiezen voor de techniek van _exponential smoothing_ waarbij we op ieder moment een gewogen gemiddelde nemen tussen onze schatting van dat moment $\\hat{b_i}$ en de nieuwe observatie $d_i$.\n",
+                "- We kiezen voor de techniek van _exponential smoothing_ waarbij we op ieder moment een gewogen gemiddelde nemen tussen onze schatting van dat moment $\\hat{b}^i$ en de nieuwe observatie $d_i$.\n",
                 "$$\n",
-                "\\hat{b_{i+1}} = \\hat{b_i}*(1-\\lambda) + d_i*(\\lambda) \\\\\n",
+                "\\hat{b}^{i+1} = \\hat{b}^i*(1-\\lambda) + d_i*(\\lambda) \\\\\n",
                 "0 < \\lambda < 1\n",
                 "$$\n",
                 "\n",
-                "Hieronder visualiseren we dit voor verschillende waarden voor $\\hat{b_0}$ en _learning rate_ $\\lambda$.  \n",
+                "Hieronder visualiseren we dit voor verschillende waarden voor $\\hat{b^0}$ en _learning rate_ $\\lambda$.  \n",
                 "Merk op dat er een grote variatie is in de kwaliteit van de uiteindelijke schatting!\n",
                 ":::"
             ]
@@ -63,7 +60,11 @@
             "cell_type": "code",
             "execution_count": 1,
             "id": "36793ce5",
-            "metadata": {},
+            "metadata": {
+                "tags": [
+                    "hide-input"
+                ]
+            },
             "outputs": [
                 {
                     "data": {
@@ -138,28 +139,30 @@
                 ":::{note} 🌍\n",
                 ":icon: false\n",
                 ":class: simple\n",
-                "In dit algoritme spreken we dus over 2 **hyper parameters**: $\\hat{b_0}$ en $\\alpha$. De keuze daarvan heeft duidelijk drastische gevolgen voor de convergentie van het leerproces.\n",
+                "In dit algoritme spreken we dus over twee _hyper parameters_: $\\hat{b}^0$ en $\\alpha$. De keuze daarvan heeft duidelijk drastische gevolgen voor de convergentie van het leerproces.\n",
                 "Als we op een bepaald moment de schatting van de model parameter $\\hat{b}$ willen vastzetten (zgn. _parameter freezing_), kunnen het algoritme ook uitbreiden met een zgn. _stopping rule_.\n",
-                "Die regel bepaald de voorwaarde om de updates te stoppen. Dat kan heel simpel door toevoeging van een hyper parameter die het maximum aantal updates bepaalt of door bijvoorbeeld een limiet te zetten op de _online_ update variantie (bv. [](https://doi.org/10.2307%2F1266577))\n",
+                "Die regel bepaalt de voorwaarde om de updates te stoppen. Dat kan heel simpel door toevoeging van een hyper parameter die het maximum aantal updates bepaalt of door bijvoorbeeld een limiet te zetten op de _online_ update variantie (bv. [](https://doi.org/10.2307%2F1266577))\n",
                 ":::\n",
                 "\n",
-                "### Verliesfunctie (_Loss function_)\n",
+                "### _Loss_ functie\n",
                 "De _Loss_ functie is ook gekend onder de namen _Error_ functie en _Cost_ functie. Er wordt in de domeinen van de wiskundige optimalisatie en beslissingstheorie ook soms gesproken over een _objectieve functie_.\n",
                 "Die verwijst ofwel naar een verliesfunctie of zijn tegengestelde vorm. Dan wordt er bijvoorbeeld ook gesproken over een _reward_ functie, _profit_ functie, _utility_ functie, _fitness_ functie, enz.\n",
                 "  \n",
-                "Bij het zoeken naar de optimale waarden voor de parameters in ons model _en/of_ om te evalueren of het leeralgoritme effectief tot _leren_ leidt, moeten we wiskundig kunnen uitdrukken wat _optimaliteit_ in een specifiek geval betekent om de _goodness of fit_ van de oplossing te kunnen uitdrukken - met andere woorden, we moeten de _optimaliteit_ van parameterschattingen op ieder moment in een cijfer kunnen uitdrukken (kwantificeren). We moeten dus een functie beschrijven die optimaliteit uitdrukt. Het doel van het optimalisatie algoritme is om de output van die functie te maximaliseren.  \n",
-                "❗Om wiskundige redenen (die in de Mathematical Foundations cursus aan bod komen), draaien we de logica echter om en beschrijven we een functie die de _sub-optimaliteit_ uitdrukt. Die functie trachtten we dan te _minimaliseren_.  \n",
+                "Bij het zoeken naar de optimale waarden voor de parameters in ons model _en/of_ om te evalueren of het leeralgoritme effectief tot _leren_ leidt, moeten we wiskundig kunnen uitdrukken wat _optimaliteit_ in een specifiek geval betekent om de _goodness of fit_ van de oplossing te kunnen uitdrukken - met andere woorden, we moeten de _optimaliteit_ van parameterschattingen op ieder moment in een cijfer kunnen uitdrukken (kwantificeren). We moeten dus een functie beschrijven die optimaliteit uitdrukt. Het doel van het leeralgoritme is om de output van die functie te maximaliseren.  \n",
+                "❗Om wiskundige redenen, draaien we de logica echter om en beschrijven we een functie die de _sub-optimaliteit_ uitdrukt. Die functie trachtten we dan te _minimaliseren_.  \n",
                 "  \n",
-                "**De _Loss_ functie is de wiskundige functie die de _sub-optimaliteit_ uitdrukt van parameterschattingen in een bepaalde context. Het doel van het optimalisatie-algoritme is om de output van die functie te _minimaliseren_.** Zoals we nog zullen illustreren, betekent dit niet per se dat het leeralgoritme rechtstreeks gebruik maakt van de _Loss_ functie.\n",
+                "(target-loss)=\n",
+                "**De _Loss_ functie is de wiskundige functie die de _sub-optimaliteit_ uitdrukt van parameterschattingen in een bepaalde context. Het doel van het leeralgoritme is om de output van die functie te _minimaliseren_.** Zoals we nog zullen illustreren, betekent dit niet per se dat het leeralgoritme rechtstreeks gebruik maakt van de _Loss_ functie.\n",
                 "\n",
                 ":::{note} 🌍\n",
                 ":icon: false\n",
                 ":class: simple\n",
-                "We nemen terug het geval van ons eenvoudige \"airco model\", waarbij we niet kiezen voor een online benadering van hier net boven, maar voor een **_batch_ optimalisatie-algoritme** (**de optimalisatie gebeurt door _tegelijk_ naar _alle_ observaties in de training data te kijken**). Een simpele definitie van optimaliteit hierbij is om op zoek te gaan naar de waarde die de kleinste afwijking heeft ten opzichte van alle observaties. Om in deze context _sub-optimaliteit_ uit te drukken als de output van een _Loss_ functie, wordt hier gekozen[^mathf] voor de zogenaamde **Sum of Squared Errors (SSE)** functie met als algemene vorm:\n",
+                "(target-batch-algorithm)=\n",
+                "We nemen terug het geval van ons eenvoudige \"airco model\" $E(d_i) = b$, waarbij we nu _niet_ kiezen voor een online benadering, maar voor een **_batch_ optimalisatie-algoritme** (**de optimalisatie gebeurt door _tegelijk_ naar _alle_ observaties in de training data te kijken**). Een simpele definitie van optimaliteit hierbij is om op zoek te gaan naar de waarde die de kleinste afwijking heeft ten opzichte van alle observaties. Om in deze context _sub-optimaliteit_ uit te drukken als de output van een _Loss_ functie, wordt hier gekozen[^mathf] voor de zogenaamde **Sum of Squared Errors (SSE)** functie met als algemene vorm:\n",
                 "$$\n",
                 "J_{SSE}(f(\\pmb{x}); \\pmb{y}) = \\sum_{i=1}^M(y_i-f(x_i))^2\n",
                 "$$\n",
-                "Deze formule stelt dat we voor elke door het model voorspelde output, $f(x_i)$, bepalen hoe _ver_ de voorspelling afligt van de werkelijke waarde $y_i$. Deze afstand wordt gekwantificeerd door eerst het verschil tussen de twee waarden te nemen en dit te kwadrateren. De gedachte hierachter is dat kleine fouten overeenkomen met kleine afstanden. Vervolgens worden alle $M$ afstanden over de gehele dataset samengevoegd door ze op te tellen. Dit resulteert in één enkel getal dat aangeeft hoe slecht de huidige parameterwaarden de structuur van de volledige dataset vastlegt. De beste set parameterschattingen minimaliseren de SSE en wordt in dit geval ook de kleinste-kwadratenoplossing (least sum of squares, LSS) genoemd.  \n",
+                "Deze formule stelt dat we voor elke door het model voorspelde output, $f(x_i)$, bepalen hoe _ver_ de voorspelling afligt van de werkelijke waarde $y_i$. Deze afstand wordt gekwantificeerd door eerst het verschil tussen de twee waarden te nemen en dit te kwadrateren. De gedachte hierachter is dat kleine fouten overeenkomen met kleine afstanden. Vervolgens worden alle $M$ afstanden over de gehele dataset samengevoegd door ze op te tellen. Dit resulteert in één enkel getal dat aangeeft hoe _slecht_ de huidige parameterwaarden de structuur van de volledige dataset vastlegt. De beste set parameterschattingen minimaliseren de SSE en wordt in dit geval ook de kleinste-kwadratenoplossing (least sum of squares, LSS) genoemd.  \n",
                 "  \n",
                 "In ons voorbeeld krijgt deze _Loss_ functie de eenvoudige vorm:\n",
                 "$$\n",
@@ -178,7 +181,11 @@
             "cell_type": "code",
             "execution_count": 5,
             "id": "b8a7d89a",
-            "metadata": {},
+            "metadata": {
+                "tags": [
+                    "hide-input"
+                ]
+            },
             "outputs": [
                 {
                     "data": {
@@ -258,7 +265,7 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.10.18"
+            "version": "3.10.19"
         }
     },
     "nbformat": 4,
