Add target references for data structure types in glossary and update notebook links

--- a/book/ml_principles/basis/structure.ipynb
+++ b/book/ml_principles/basis/structure.ipynb
@@ -14,7 +14,7 @@
                 "De verschillen tussen deze datatypes zijn cruciaal voor de keuze tussen ML modellen en leeralgoritmes.\n",
                 "\n",
                 "## Gestructureerde data\n",
-                "\n",
+                "(target-structured-data)=\n",
                 "**Gestructureerde data is data die een gestandaardiseerd formaat heeft dat wordt gedefinieerd door een schema**. Deze data wordt doorgaans opgeslagen in een tabelformaat met rijen en kolommen, wat het gemakkelijk maakt om te doorzoeken en te analyseren.\n",
                 "\n",
                 "### Kenmerken\n",
@@ -35,45 +35,40 @@
             "cell_type": "code",
             "execution_count": 1,
             "id": "8d1be528",
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "import os\n",
-                "\n",
-                "import kagglehub\n",
-                "import pandas as pd"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": 2,
-            "id": "bb7ddd9e",
-            "metadata": {},
+            "metadata": {
+                "tags": [
+                    "hide-input"
+                ]
+            },
             "outputs": [
                 {
                     "name": "stdout",
                     "output_type": "stream",
                     "text": [
-                        "✅ Data loaded successfully!\n"
+                        "Downloading from https://www.kaggle.com/api/v1/datasets/download/yashdevladdha/uber-ride-analytics-dashboard?dataset_version_number=2...\n"
                     ]
-                }
-            ],
-            "source": [
-                "# Download data from kaggle\n",
-                "path = kagglehub.dataset_download(\"yashdevladdha/uber-ride-analytics-dashboard\")\n",
-                "\n",
-                "# Load data into Pandas DataFrame\n",
-                "csv_file = os.path.join(path, \"ncr_ride_bookings.csv\")\n",
-                "df = pd.read_csv(csv_file)\n",
-                "print(\"✅ Data loaded successfully!\")"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": 3,
-            "id": "6deb2ff2",
-            "metadata": {},
-            "outputs": [
+                },
+                {
+                    "name": "stderr",
+                    "output_type": "stream",
+                    "text": [
+                        "100%|██████████| 16.5M/16.5M [00:02<00:00, 7.78MB/s]"
+                    ]
+                },
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "Extracting files...\n"
+                    ]
+                },
+                {
+                    "name": "stderr",
+                    "output_type": "stream",
+                    "text": [
+                        "\n"
+                    ]
+                },
                 {
                     "data": {
                         "text/html": [
@@ -290,12 +285,24 @@
                             "[5 rows x 21 columns]"
                         ]
                     },
-                    "execution_count": 3,
+                    "execution_count": 1,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
             ],
             "source": [
+                "import os\n",
+                "\n",
+                "import kagglehub\n",
+                "import pandas as pd\n",
+                "\n",
+                "# Download data from kaggle\n",
+                "path = kagglehub.dataset_download(\"yashdevladdha/uber-ride-analytics-dashboard\")\n",
+                "\n",
+                "# Load data into Pandas DataFrame\n",
+                "csv_file = os.path.join(path, \"ncr_ride_bookings.csv\")\n",
+                "df = pd.read_csv(csv_file)\n",
+                "\n",
                 "df.head()"
             ]
         },
@@ -305,7 +312,7 @@
             "metadata": {},
             "source": [
                 "## Semi-gestructureerde data\n",
-                "\n",
+                "(target-semi-structured-data)=\n",
                 "Semi-gestructureerde data bevindt zich tussen gestructureerde en ongestructureerde data in. Het heeft **geen star schema zoals gestructureerde data, maar bevat wel organisatorische elementen zoals tags, labels of andere markers die helpen bij het categoriseren van de informatie**.\n",
                 "\n",
                 "### Kenmerken\n",
@@ -328,19 +335,13 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 7,
+            "execution_count": 2,
             "id": "8a330a7a",
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "import json"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": 8,
-            "id": "99c37b1a",
-            "metadata": {},
+            "metadata": {
+                "tags": [
+                    "hide-input"
+                ]
+            },
             "outputs": [
                 {
                     "data": {
@@ -364,10 +365,15 @@
                             "    'ms-python.mypy-type-checker',\n",
                             "    'ms-python.python',\n",
                             "    'ms-toolsai.jupyter',\n",
+                            "    'ms-toolsai.vscode-jupyter-cell-tags',\n",
                             "    'ryanluker.vscode-coverage-gutters',\n",
+                            "    'saoudrizwan.claude-dev',\n",
+                            "    'streetsidesoftware.code-spell-checker',\n",
+                            "    'streetsidesoftware.code-spell-checker-dutch',\n",
                             "    'tamasfe.even-better-toml',\n",
                             "    'visualstudioexptteam.vscodeintellicode'],\n",
                             "   'settings': {'coverage-gutters.coverageFileNames': ['reports/coverage.xml'],\n",
+                            "    'cSpell.language': 'en,nl',\n",
                             "    'editor.codeActionsOnSave': {'source.fixAll': 'explicit',\n",
                             "     'source.organizeImports': 'explicit'},\n",
                             "    'editor.formatOnSave': True,\n",
@@ -393,12 +399,14 @@
                             "    'terminal.integrated.env.mac': {'GIT_EDITOR': 'code --wait'}}}}}"
                         ]
                     },
-                    "execution_count": 8,
+                    "execution_count": 2,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
             ],
             "source": [
+                "import json\n",
+                "\n",
                 "with open(\"../../../.devcontainer/devcontainer.json\") as f:\n",
                 "    devcontainer_spec = json.load(f)\n",
                 "devcontainer_spec"
@@ -406,9 +414,13 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 9,
+            "execution_count": 3,
             "id": "6a204426",
-            "metadata": {},
+            "metadata": {
+                "tags": [
+                    "hide-input"
+                ]
+            },
             "outputs": [
                 {
                     "data": {
@@ -525,7 +537,7 @@
                             "vscode                                           {'extensions': ['charliermarsh.ruff', 'GitHub....  "
                         ]
                     },
-                    "execution_count": 9,
+                    "execution_count": 3,
                     "metadata": {},
                     "output_type": "execute_result"
                 }
@@ -540,7 +552,7 @@
             "metadata": {},
             "source": [
                 "## Ongestructureerde data\n",
-                "\n",
+                "(target-unstructured-data)\n",
                 "Ongestructureerde data is **vrije data (_in the wild_) die geen consistent model volgt**. Het is vaak rijker aan informatie maar moeilijker te verwerken dan gestructureerde data.\n",
                 "\n",
                 "### Kenmerken\n",
