Refactor myst.yml: Remove structured data section and update file hierarchy

--- a/book/math_foundations/lineaire_regressie/gradient.ipynb
+++ b/book/math_foundations/lineaire_regressie/gradient.ipynb
@@ -5,6 +5,7 @@
    "id": "b2adf5d2",
    "metadata": {},
    "source": [
+    "(target-sse-gradient)=\n",
     "# $SSE$ gradiënt\n",
     "\n",
     "In deze sectie concentreren we ons eerst op de $SSE$ functie in het (triviale) geval dat we een linear regressiemodel hebben met enkel een _intercept_ ($\\pmb{b} = [b_1]^T$). We krijgen dan een U-vormige curve te zien zoals hieronder afgebeeld. Pas in tweede instantie kijken we naar modellen met één of meerdere _predictoren_ $\\pmb{b} = [b_1, b_2, \\ldots]^T$.\n",
