--- a/book/ml_principles/basis/evaluation.ipynb
+++ b/book/ml_principles/basis/evaluation.ipynb
@@ -22,7 +22,11 @@
                 "  \n",
                 "Vaak wordt met een meer geavanceerde vorm van validatie gewerkt: zogenaamde _K-Fold Cross_-validatie. In plaats van één stuk data opzij te houden als validatie data, wordt de trainingsdata in _K_ gelijke delen op gesplitst. Het model wordt dan bij iedere tussenstap _K_ keer getraind met _K-1_ delen en gevalideerd met het overige deel.  \n",
                 "  \n",
-                "[![](https://scikit-learn.org/stable/_images/grid_search_cross_validation.png?raw=true)](https://scikit-learn.org/stable/modules/cross_validation.html)"
+                "[![](https://scikit-learn.org/stable/_images/grid_search_cross_validation.png?raw=true)](https://scikit-learn.org/stable/modules/cross_validation.html)\n",
+                "\n",
+                "## _Explainability_\n",
+                "(target-explainability)=\n",
+                "Bij de evaluatie van modellen is het zaak om ook inzicht te krijgen in de effectieve patronen die geleerd zijn en **hoe een model, gegeven concrete inputs, tot bepaalde voorspellingen komt**. Dit is bij bepaalde toepassingen (bv. medische diagnostiek) cruciaal. Zoals we zullen zien in de secties over concrete toepassingsdomeinen, is dit, afhankelijk van het type model, niet altijd even evident.\n"
             ]
         }
     ],
