--- a/book/ml_principles/basis/features.ipynb
+++ b/book/ml_principles/basis/features.ipynb
@@ -115,8 +115,7 @@
                 "(target-feature-engineering)=\n",
                 "Het proces waarbij we de link leggen tussen model parameters en de data aan de hand van features noemen we **feature engineering**.\n",
                 "Wanneer we zelf op maat modellen uitwerken voor bepaalde patroonherkenning, gaan we soms heel veel tijd in dit proces steken.\n",
-                "Er zijn vaak verschillende keuzes die gemaakt kunnen worden over hoe we precies bepaalde informatie in de data projecteren op de parameters via de features. Die keuzes kunnen bepalend zijn voor de mogelijkheid om bepaalde patronen te leren.\n",
-                "  \n",
+                "Er zijn vaak verschillende keuzes die gemaakt kunnen worden over hoe we precies bepaalde informatie in de data projecteren op de parameters via de features. Die keuzes kunnen bepalend zijn voor de mogelijkheid om bepaalde patronen te leren.  \n",
                 "\n",
                 ":::{note} 🌍\n",
                 ":icon: false\n",
@@ -512,6 +511,31 @@
                 "season_dummies = pd.DataFrame(season_encoded, columns=season_columns, index=df.index)\n",
                 "df = pd.concat([df, season_dummies], axis=1)\n",
                 "df\n"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "id": "835f4bb9",
+            "metadata": {},
+            "source": [
+                "### Meetschaal\n",
+                "(target-measuring-scales)=\n",
+                "De keuzes bij feature engineering worden in de eerste plaats bepaald door de meetschaal van de inputvariabelen:\n",
+                "- **Nominaal**: De informatie laat toe om items in bepaalde categorieën te plaatsen (bv. \"fruit\" $\\neq$ \"groente\" $\\neq$ \"vlees\" $\\neq$ \"rond\" $\\neq$ \"vierkant\" $\\neq$ $\\ldots$)\n",
+                "- **Ordinaal**: De informatie laat toe om items te ordenen (bv. \"small\" $<$ \"medium\" $<$ \"large\")\n",
+                "- **Interval**: De informatie laat toe om de afstand tussen items te bepalen (bv. $45\\degree - 10\\degree = 5\\degree - (-30\\degree)$)\n",
+                "- **Ratio**: De informatie laat toe om de verhoudingen tussen items te bepalen (bv. $\\frac{120km/h}{60km/h} = \\frac{30km/h}{15km/h}$)\n",
+                "\n",
+                "### (On)volledigheid\n",
+                "(target-missing-values)=\n",
+                "De data zijn in veel gevallen onvolledig (met verschillende gradaties per inputvariabele) en er moet dus bij feature engineering nagedacht worden over hoe om te gaan met **_missing data_**:\n",
+                "- Niet: Sommige modellen kunnen perfect om met voorbeelden (denk: rijen) waar één of meerdere feature-waarden ontbreken\n",
+                "- Verwijderen: Als er genoeg andere voorbeelden zijn kan het baten om onvolledige rijen in de feature matrix simpelweg te verwijderen\n",
+                "- _Imputation_: Hierbij gaan we ontbrekende feature waarden volgens een bepaalde strategie invullen.\n",
+                "\n",
+                "#### Missing value imputation\n",
+                "Wanneer _missingness_ systematisch optreedt, draagt het bij tot ongebalanceerdheid van de trainingsdata en neemt het risico op _bias_ in de model outputs toe. Er bestaan verschillende strategieën om ontbrekende waarden in te vullen (random, interpolatie, gemiddeldes, enz.). Er bestaan zelfs model-gebaseerde strategieën.  \n",
+                "[![](https://img.shields.io/badge/Wikipedia-000?logo=wikipedia&logoColor=fff&style=flat)](https://en.wikipedia.org/wiki/Missing_data)\n"
             ]
         }
     ],
