--- a/book/ml_principles/basis/training.ipynb
+++ b/book/ml_principles/basis/training.ipynb
@@ -23,7 +23,7 @@
                 "Het is niet omdat we een getraind model hebben, dat dit automatisch betekent dat het de juiste patronen geleerd heeft en bruikbaar is om voorspellingen te doen - dit is het onderwerp van {ref}`model evaluatie <target-evaluation>`.\n",
                 ":::\n",
                 "\n",
-                "### Leeralgoritme\n",
+                "## Leeralgoritme\n",
                 "(target-learning-algorithm)=\n",
                 "**Een leer- of optimalisatie-algoritme heeft als doel om de optimale waarde voor een parameter te vinden, gegeven ons model (van de datageneratie) en de beschikbare data.**\n",
                 "Bij het uitvoeren van het leeralgoritme gebeurt dus het eigenlijke leren in ML. Ook hier zijn vaak verschillende keuzes aan de orde.\n",
@@ -144,7 +144,7 @@
                 "Die regel bepaalt de voorwaarde om de updates te stoppen. Dat kan heel simpel door toevoeging van een hyper parameter die het maximum aantal updates bepaalt of door bijvoorbeeld een limiet te zetten op de _online_ update variantie (bv. [](https://doi.org/10.2307%2F1266577))\n",
                 ":::\n",
                 "\n",
-                "### _Loss_ functie\n",
+                "## _Loss_ functie\n",
                 "De _Loss_ functie is ook gekend onder de namen _Error_ functie en _Cost_ functie. Er wordt in de domeinen van de wiskundige optimalisatie en beslissingstheorie ook soms gesproken over een _objectieve functie_.\n",
                 "Die verwijst ofwel naar een verliesfunctie of zijn tegengestelde vorm. Dan wordt er bijvoorbeeld ook gesproken over een _reward_ functie, _profit_ functie, _utility_ functie, _fitness_ functie, enz.\n",
                 "  \n",
@@ -246,6 +246,31 @@
                 "plt.grid(True)\n",
                 "plt.tight_layout()\n",
                 "plt.show()"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "id": "79193686",
+            "metadata": {},
+            "source": [
+                "\n",
+                "## (On)gebalanceerdde trainingsdata en _bias_\n",
+                "(target-imbalance)=\n",
+                "**Ongebalanceerdheid** van trainingsdata verwijst naar het fenomeen waarbij **bepaalde categorieën** (bv. hond/kat) **of continue waarden** (bv. leeftijden) **over- of ondervertegenwoordigd zijn in de trainingsdata**. Dit kan louter het gevolg zijn van natuurlijke _scheefheid_ ofwel een gevolg van de specifieke manier van trainingsdataverzameling. Dit is een algemeen aandachtspunt bij trainingsdata die op natuurlijke wijze verkregen zijn (bv. verkooptransacties, server logs, enz.). Naargelang de ernst van ongebalanceerdheid, leidt het tot **_statistische bias_**. Dit verwijst naar het fenomeen waarbij **getrainde modellen _systematische_ predictiefouten maken en dus bepaalde _voorkeuren_ hebben ontwikkeld**.  \n",
+                "  \n",
+                ":::{note} 🌍\n",
+                ":icon: false\n",
+                ":class: simple\n",
+                "In extreme gevallen kan een model totaal onbruikbaar worden door ongebalanceerdheid. Stel dat we een dataset krijgen om frauduleuze transacties te voorspellen op basis van een aantal features (bv. IP locatie, volume, enz.). Aangezien we hier met zeldzame events te maken hebben, is de dataset zeer ongebalanceerd met betrekking tot de target klasse (zgn. _class imbalance_) - bijvoorbeeld: 3% frauduleuze transacties versus 97% niet-frauduleuze transacties. Dit impliceert dat een model dat altijd (100%) \"niet-frauduleus\" voorspelt, een accuraatheid van 97% behaalt - een percentage waar we in andere situaties enkel van kunnen dromen.\n",
+                "  \n",
+                "Ongebalanceerdheid weerspiegelt soms ook sociale ongelijkheden waardoor het risico ontstaat dat we een model creëren dat die ongelijkheden overneemt of zelfs uitvergroot (door bv. systematisch meerderheden te bevooroordelen). Dit is het domein van _ethische ML_.\n",
+                ":::\n",
+                "\n",
+                "Om ons in te dekken tegen ongebalanceerdheid is exploratieve data analyse een belangrijke tool. Het kan geremedieerd worden door extra data te verzamelen en/of door _over-/ondersampling_ toe te passen op de trainingsdata.\n",
+                "(target-under-sampling)=\n",
+                "- Bij **_under sampling_ gaan we een random selectie (_subsample_) maken van overgerepresenteerde categorieën of waarden** zodat er een betere balans ontstaat met de ondergerepresenteerde data. Modellen worden dan soms meerdere keren getraind, telkens met een andere _subsample_ om zeker te zijn dat de ondersampling zelf geen artefacten teweeg brengt.\n",
+                "(target-over-sampling)=\n",
+                "- Bij **_over sampling_** worden nieuwe, meer gebalanceerde datasets gemaakt door **random samples uit de ondergerepresenteerde categorieën of waarden _toe te voegen_**. Dit houdt data duplicatie in, maar is in bepaalde gevallen een zeer effectieve strategie tegen _bias_."
             ]
         }
     ],
