--- a/book/math_foundations/lineaire_regressie/grid.ipynb
+++ b/book/math_foundations/lineaire_regressie/grid.ipynb
@@ -10,6 +10,7 @@
                 "**Lineaire regressie** is een centraal **model** binnen Machine Learning. Om de wiskunde van ML te begrijpen is het een absolute _must_ om dit model - en vooral ook de geassocieerde leeralgoritmes - ten volle te doorgronden. Het model komt uit de statistiek en veronderstelt dat **bepaalde target data (\"_responsvariabele(n)_\" genoemd in de statistiek) in lineair verband staan met één of meerdere features (ook wel \"_predictoren_\" genoemd in de de statistiek**).  \n",
                 "  \n",
                 "## Data simulatie\n",
+                "(target-coffee-simulation)=\n",
                 "We beginnen met de simulatie van een simpele situatie. Stel dat er in een ideale wereld (voor koffiehuizen) een lineare relatie bestaat tussen de grootte van een bestelling en de fooi die klanten erbovenop betalen:\n",
                 "$$\n",
                 "y = b_1 + b_2x\n",
@@ -3488,6 +3489,7 @@
             "id": "da514baf",
             "metadata": {},
             "source": [
+                "(target-r2)=\n",
                 ":::{note} R² als maat voor _goodness of fit_\n",
                 "\n",
                 "Een veelgebruikte maat om te evalueren hoe goed een bepaalde oplossing van een lineair regressiemodel de data beschrijft, is de **R-squared of $R^2$** waarde (ook wel **determinatiecoëfficiënt** genoemd).\n",
